# vector-quantize

./: EXPERIMENT_SUMMARY.md  INSTALLATION.md  MODULE_RENAME_SUMMARY.md  QUICK_REFERENCE.md  README_GPU.md  pyproject.toml  run_experiments.py  setup.py
vector_quantize_pytorch/: __init__.py  ba_vector_quantize.py
vq_modules/: __init__.py  ba_vector_quantize.py
vqvae_cifar/: README.md  data.py  model.py  requirements.txt  vqvae.py
