[project]
name = "vq_modules"
version = "0.1.0"
description = "Vector Quantization modules including Blahut-Arimoto VQ for VQ-VAE experiments"
authors = [
    { name = "Nikita Karagodin" }
]
requires-python = ">= 3.8"
dependencies = [
    "torch>=2.0",
    "einops>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vq_modules"]
